feat: add entry form

--- a/client/src/assets/styles/variables.scss
+++ b/client/src/assets/styles/variables.scss
@@ -1,2 +1,11 @@
 $color-background-light: #f2f7f7;
 $color-background-dark: #191a1a;
+$color-primary: #304ffe;
+$color-hover: #0026ca;
+$color-active: #7a7cff;
+$color-secondary: #c9cfda;
+$text-color-primary: #ffffff;
+$text-color-secondary: #b0bac9;
+$shadow-primary: 0px 4px 5px 0px rgba(48, 79, 254, 0.2),
+  0px 3px 14px 0px rgba(48, 79, 254, 0.12),
+  0px 8px 10px 0px rgba(48, 79, 254, 0.14);
