--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300&display=swap');
+
+html {
+  font-size: 14px;
+  line-height: 1;
+  font-family: 'Open Sans', sans-serif;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -5,4 +13,10 @@ body {
   box-sizing: border-box;
   background: $color-background-light;
   display: flex;
+}
+
+#app {
+  min-width: 100%;
+  display: flex;
+  flex-direction: column;
 }
