feat: add header

--- a/client/src/assets/styles/variables.scss
+++ b/client/src/assets/styles/variables.scss
@@ -1,4 +1,4 @@
-$color-background-light: #f0f0f0;
+$color-background-light: #fafafa;
 $color-background-dark: #191a1a;
 $color-primary: #304ffe;
 $color-hover: #0026ca;
