--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -11,12 +11,13 @@ body {
   padding: 0;
   min-height: 100vh;
   box-sizing: border-box;
-  background: $color-background-light;
   display: flex;
 }
 
 #app {
   min-width: 100%;
-  display: flex;
-  flex-direction: column;
+}
+
+.container {
+  padding: 0 1.5rem;
 }
