feat: add account view, tabs and upload avatar components

--- a/client/src/assets/styles/variables.scss
+++ b/client/src/assets/styles/variables.scss
@@ -4,6 +4,7 @@ $color-primary: #304ffe;
 $color-hover: #0026ca;
 $color-active: #7a7cff;
 $color-secondary: #c9cfda;
+$color-white: #ffffff;
 $text-color-primary: #ffffff;
 $text-color-secondary: #b0bac9;
 $text-color-error: #fc0b03;
