--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300&display=swap');
 
+html,
+body,
+#app {
+  min-height: 100vh;
+}
+
 html {
   font-size: 14px;
   line-height: 1;
@@ -9,9 +15,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  min-height: 100vh;
   box-sizing: border-box;
-  display: flex;
 }
 
 #app {
@@ -20,4 +24,7 @@ body {
 
 .container {
   padding: 0 1.5rem;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
 }
