--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300&display=swap');
+@import '@/assets/styles/variables.scss';
 
 html,
 body,
 #app {
   min-height: 100vh;
+  background: var(--color-bg);
 }
 
 body.no-scroll {
