--- a/client/src/assets/styles/variables.scss
+++ b/client/src/assets/styles/variables.scss
@@ -19,6 +19,7 @@
   --btn-shadow: 0px 4px 5px 0px rgba(48, 79, 254, 0.2),
                 0px 3px 14px 0px rgba(48, 79, 254, 0.12),
                 0px 8px 10px 0px rgba(48, 79, 254, 0.14);
+  --change-theme-transition: background-color 0.2s ease-in-out;
 }
   
 [data-theme="dark"] {
