--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -5,7 +5,6 @@ html,
 body,
 #app {
   min-height: 100vh;
-  background: var(--color-bg);
 }
 
 body.no-scroll {
@@ -22,6 +21,8 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background: var(--color-bg);
+  transition: var(--change-theme-transition);
 }
 
 #app {
