feat: add text field component

--- a/client/src/assets/styles/mixins.scss
+++ b/client/src/assets/styles/mixins.scss
@@ -17,3 +17,13 @@
     padding-bottom: 1rem;
   }
 }
+
+@mixin input-border {
+  border-width: 1px;
+  border-style: solid;
+  border-color: var(--border-color);
+
+  &:focus {
+    border-color: var(--border-color-active);
+  }
+}
