--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cookie&display=swap');
-@import '@/assets/styles/variables.scss';
 
 html,
 body,
@@ -23,7 +22,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   background: var(--background-bottom-left) bottom left / 30%,
-              var(--background-top-right) top right / 20%,
+              var(--background-top-right) 100% 10% / 20%,
               var(--color-bg);
   background-repeat: no-repeat;
   transition: var(--change-theme-transition);
