feat: add chat view base tamplate

--- a/client/src/assets/styles/variables.scss
+++ b/client/src/assets/styles/variables.scss
@@ -30,6 +30,7 @@
   --background-bottom-left: url('../bg/look-back-cat-dark.svg');
   --background-top-right: url('../bg/doodle-top-right-dark.svg');
   --color-paper: #393b3b;
+  --color-paper-medium: #535757;
   --color-bg: #191a1a;
   --text-color-primary: rgba(255, 255, 255, 0.7);
   --text-color-secondary: #b0bac9;
